--- a/starter/src/App.css
+++ b/starter/src/App.css
@@ -9,19 +9,20 @@ body {
 body,
 .app {
   background: white;
+  font-family: "Lucida Console", "Courier New", monospace;
 }
 
 /* main page */
 
 .list-books-title {
   padding: 10px 0;
-  background: #2e7c31;
+  background: #222;
   text-align: center;
 }
 .list-books-title h1 {
   font-weight: 400;
   margin: 0;
-  color: white;
+  color: cyan;
 }
 
 .list-books-content {
@@ -40,7 +41,8 @@ body,
 }
 
 .bookshelf-title {
-  border-bottom: 1px solid #dedede;
+  border-bottom: 1px solid #222;
+  color: blue;
 }
 .bookshelf-books {
   text-align: center;
@@ -112,10 +114,13 @@ body,
   list-style-type: none;
   padding: 0;
   margin: 0;
-
+  border-style: solid;
+  border-radius: 30px;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  width: auto;
+  box-shadow: 0 20px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
 .books-grid li {
   padding: 10px 15px;
@@ -167,8 +172,7 @@ body,
 /* book cover */
 
 .book-cover {
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-  background: #eee;
+  background: transparent;
 }
 .book-cover-title {
   padding: 20px 10px 0;
